--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "form-data": "^2.3.2",
     "hat": "0.0.3",
     "interface-ipfs-core": "~0.76.1",
-    "ipfsd-ctl": "~0.39.1",
+    "ipfsd-ctl": "~0.39.2",
     "mocha": "^5.2.0",
     "ncp": "^2.0.0",
     "nexpect": "~0.5.0",
@@ -85,6 +85,7 @@
   "dependencies": {
     "@nodeutils/defaults-deep": "^1.1.0",
     "async": "^2.6.1",
+    "base32.js": "~0.1.0",
     "big.js": "^5.1.2",
     "binary-querystring": "~0.1.2",
     "bl": "^2.0.1",
@@ -92,6 +93,8 @@
     "bs58": "^4.0.1",
     "byteman": "^1.3.5",
     "cids": "~0.5.3",
+    "datastore-core": "~0.4.0",
+    "datastore-pubsub": "~0.0.1",
     "debug": "^3.1.0",
     "err-code": "^1.1.2",
     "file-type": "^8.1.0",
@@ -118,7 +121,7 @@
     "ipld": "~0.17.3",
     "ipld-dag-cbor": "~0.12.1",
     "ipld-dag-pb": "~0.14.6",
-    "ipns": "~0.1.3",
+    "ipns": "~0.1.5",
     "is-ipfs": "~0.4.2",
     "is-pull-stream": "~0.0.0",
     "is-stream": "^1.1.0",
